--- a/src/output.css
+++ b/src/output.css
@@ -582,6 +582,10 @@ video {
   position: static;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -606,6 +610,10 @@ video {
   bottom: 2.5rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-4 {
   left: 1rem;
 }
@@ -618,6 +626,10 @@ video {
   right: 15rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-1 {
   top: 0.25rem;
 }
@@ -626,52 +638,56 @@ video {
   top: 11rem;
 }
 
-.left-0 {
-  left: 0px;
+.top-10 {
+  top: 2.5rem;
 }
 
-.-left-3 {
-  left: -0.75rem;
+.top-\[50\%\] {
+  top: 50%;
 }
 
-.-left-2 {
-  left: -0.5rem;
+.top-24 {
+  top: 6rem;
 }
 
-.-left-1 {
-  left: -0.25rem;
+.top-5 {
+  top: 1.25rem;
 }
 
-.-left-0 {
-  left: -0px;
+.top-80 {
+  top: 20rem;
 }
 
-.top-2 {
-  top: 0.5rem;
+.top-64 {
+  top: 16rem;
 }
 
-.top-2\.5 {
-  top: 0.625rem;
+.top-52 {
+  top: 13rem;
 }
 
-.top-0 {
-  top: 0px;
+.top-56 {
+  top: 14rem;
 }
 
-.-top-1 {
-  top: -0.25rem;
+.left-10 {
+  left: 2.5rem;
 }
 
-.-top-0 {
-  top: -0px;
+.left-12 {
+  left: 3rem;
 }
 
-.-top-0\.5 {
-  top: -0.125rem;
+.left-11 {
+  left: 2.75rem;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .order-first {
@@ -708,6 +724,10 @@ video {
   margin-bottom: 1.75rem;
 }
 
+.-mb-10 {
+  margin-bottom: -2.5rem;
+}
+
 .-ml-28 {
   margin-left: -7rem;
 }
@@ -724,6 +744,10 @@ video {
   margin-top: -0.75rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-14 {
   margin-bottom: 3.5rem;
 }
@@ -732,8 +756,16 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .ml-4 {
@@ -780,40 +812,12 @@ video {
   margin-top: 1rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.-mb-10 {
-  margin-bottom: -2.5rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .block {
@@ -822,10 +826,6 @@ video {
 
 .flex {
   display: flex;
-}
-
-.inline-flex {
-  display: inline-flex;
 }
 
 .grid {
@@ -844,16 +844,64 @@ video {
   height: 1rem;
 }
 
-.h-full {
-  height: 100%;
+.h-screen {
+  height: 100vh;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-72 {
+  height: 18rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-80 {
+  height: 20rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[15\%\] {
+  height: 15%;
+}
+
+.h-\[cal\(\)\] {
+  height: cal();
+}
+
+.h-\[cal\(100\)\] {
+  height: cal(100);
+}
+
+.h-\[cal\(100\%-\)\] {
+  height: cal(100%-);
+}
+
+.h-\[cal\(100\%-100px\)\] {
+  height: cal(100%-100px);
+}
+
+.h-\[calc\(100\%-100px\)\] {
+  height: calc(100% - 100px);
+}
+
+.h-\[calc\(100\%-50px\)\] {
+  height: calc(100% - 50px);
+}
+
+.h-\[calc\(100vh-50px\)\] {
+  height: calc(100vh - 50px);
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[350px\] {
+  height: 350px;
+}
+
+.h-\[400px\] {
+  height: 400px;
 }
 
 .max-h-\[32px\] {
@@ -876,6 +924,10 @@ video {
   width: 13rem;
 }
 
+.w-64 {
+  width: 16rem;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -884,16 +936,12 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-20 {
+  width: 5rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-64 {
-  width: 16rem;
+.w-44 {
+  width: 11rem;
 }
 
 .max-w-16 {
@@ -1022,10 +1070,6 @@ video {
   gap: 1.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
@@ -1080,8 +1124,8 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.text-ellipsis {
-  text-overflow: ellipsis;
+.overflow-auto {
+  overflow: auto;
 }
 
 .rounded {
@@ -1117,11 +1161,6 @@ video {
   border-bottom-left-radius: 3.5rem;
 }
 
-.rounded-t-\[3\.5rem\] {
-  border-top-left-radius: 3.5rem;
-  border-top-right-radius: 3.5rem;
-}
-
 .rounded-l-xl {
   border-top-left-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
@@ -1130,6 +1169,11 @@ video {
 .rounded-r-xl {
   border-top-right-radius: 0.75rem;
   border-bottom-right-radius: 0.75rem;
+}
+
+.rounded-t-\[3\.5rem\] {
+  border-top-left-radius: 3.5rem;
+  border-top-right-radius: 3.5rem;
 }
 
 .border {
@@ -1161,8 +1205,20 @@ video {
   border-left-width: 8px;
 }
 
+.border-r {
+  border-right-width: 1px;
+}
+
 .border-t {
   border-top-width: 1px;
+}
+
+.border-l-2 {
+  border-left-width: 2px;
+}
+
+.border-l-4 {
+  border-left-width: 4px;
 }
 
 .border-\[\#6975e3\] {
@@ -1200,6 +1256,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-\[\#c9c3ba\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(201 195 186 / var(--tw-border-opacity));
+}
+
 .border-x-black {
   --tw-border-opacity: 1;
   border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -1216,9 +1277,28 @@ video {
   border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-r-white {
+  --tw-border-opacity: 1;
+  border-right-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .border-t-\[\#E6DCCF\] {
   --tw-border-opacity: 1;
   border-top-color: rgb(230 220 207 / var(--tw-border-opacity));
+}
+
+.border-t-\[\#c9c3ba\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(201 195 186 / var(--tw-border-opacity));
+}
+
+.border-l-\[\] {
+  border-left-color: ;
+}
+
+.border-l-\[\#3F52FF\] {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(63 82 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#3F52FF\] {
@@ -1266,6 +1346,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
@@ -1280,14 +1365,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100 {
+.bg-lime-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1317,10 +1397,6 @@ video {
 
 .p-\[5px\] {
   padding: 5px;
-}
-
-.p-3\.5 {
-  padding: 0.875rem;
 }
 
 .px-0 {
@@ -1358,6 +1434,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1376,6 +1457,11 @@ video {
 .py-1\.5 {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-14 {
@@ -1413,21 +1499,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1444,8 +1515,8 @@ video {
   padding-bottom: 6rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pl-10 {
@@ -1484,12 +1555,8 @@ video {
   padding-inline-start: 2.25rem;
 }
 
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -1534,11 +1601,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -1691,10 +1753,6 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.\*\:items-stretch > * {
-  align-items: stretch;
-}
-
 .placeholder\:text-sm::-moz-placeholder {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1797,6 +1855,16 @@ video {
   background-color: rgb(163 230 53 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .hover\:font-bold:hover {
   font-weight: 700;
 }
@@ -1816,24 +1884,8 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:ml-auto {
-    margin-left: auto;
-  }
-
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
   .sm\:flex-row {
     flex-direction: row;
-  }
-
-  .sm\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .sm\:text-left {
-    text-align: left;
   }
 }
 
